--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
     border-radius: 50%;
     background-color: #4070f4;
     padding: 3px;
+    margin-bottom: 10px;
 }
 
 .image img{
@@ -28,4 +29,68 @@ body {
     object-fit: cover;
     border-radius: 50%;
     border: 3px solid #fff;
+}
+
+.profile-card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 370px;
+    width: 100%;
+    background-color: #fff;
+    border-radius: 24px;
+    padding: 25px;
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+    position: relative;
+}
+
+.profile-card .text-data{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #333;
+}
+
+.text-data .name{
+    font-size: 22px;
+    font-weight: 500;
+}
+
+.text-data .prof{
+    font-size: 15px;
+    font-weight: 400;
+    margin-bottom: 10px;
+}
+
+.media-buttons a{
+    text-decoration: none;
+}
+
+.profile-card .media-buttons {
+    display: flex;
+    align-items: center;
+    margin-top: 15px;
+}
+
+.profile-card .buttons{
+    display: flex;
+    align-items: center;
+    margin-top: 25px; 
+}
+
+.buttons .button{
+    padding: 8px 24px;
+    background-color: #4070f4;
+    margin: 0 10px;
+    border-radius: 24px;
+    border: none;
+    color: #fff;
+    font-size: 14px;
+    font-weight: 400;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.buttons .button:hover{
+    background-color: #0e4bf1;
 }
